--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -62,9 +62,9 @@ custom_proxy_group=♻️ 自动选择`url-test`((^(?!.*x(?:[2-9]|[1-9][0-9]))(?
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9])))`http://www.gstatic.com/generate_204`300,100
 
 
-custom_proxy_group=👛 PayPal`[]DIRECT`[]REJECT`select`.*
+custom_proxy_group=👛 PayPal`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🛍️ Etsy平台`select`.*
-custom_proxy_group=🛍️ Shopify`[]DIRECT`[]REJECT`select`.*
+custom_proxy_group=🛍️ Shopify`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🛍️ 亚马逊`select`.*
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
