--- a/jonrule.ini
+++ b/jonrule.ini
@@ -68,11 +68,11 @@ custom_proxy_group=🛍️ Shopify`select`[]DIRECT`[]REJECT`.*
 custom_proxy_group=🛍️ 亚马逊`select`.*
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换
+custom_proxy_group=🤖 AI`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换`.*
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🏡 家宽节点`[]🐸 手动切换
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT`.*
 custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
@@ -88,8 +88,8 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 啊啊啊隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🐸 手动切换`[]REJECT`[]DIRECT
-custom_proxy_group=🍠 小红书`select`[]♻️ 自动选择`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🐸 手动切换`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🐸 手动切换`[]REJECT`[]DIRECT`.*
+custom_proxy_group=🍠 小红书`select`[]♻️ 自动选择`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🐸 手动切换`[]REJECT`[]DIRECT`.*
 
 
 custom_proxy_group=🐸 手动切换`select`.*
