--- a/jonrule.ini
+++ b/jonrule.ini
@@ -15,6 +15,7 @@ ruleset=🍠 小红书,clash-domain:https://raw.githubusercontent.com/chinnsenn/
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Anglylobaby/Jon-clash-rule/refs/heads/main/rules/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/Anglylobaby/Jon-clash-rule/refs/heads/main/rules/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/Anglylobaby/Jon-clash-rule/refs/heads/main/rules/AI.list
+ruleset=🧑‍💻 Cursor,https://raw.githubusercontent.com/Anglylobaby/Jon-clash-rule/refs/heads/main/rules/Cursor.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -69,6 +70,7 @@ custom_proxy_group=🛍️ 亚马逊`select`.*
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换`.*
+custom_proxy_group=🧑‍💻 Cursor`select`[]🇭🇰 香港节点-自动`[]🇹🇼 台湾节点-自动`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换`.*
 custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🏡 家宽节点`[]🐸 手动切换
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
